# minidisplay

./: Cargo.toml  README.md
examples/: example.rs
src/: display_info.rs  displays.rs  lib.rs  rectangle.rs
src/win/: display_info.rs  enumerate_displays.rs  mod.rs  rectangle.rs  util.rs
