[package]
name = "minidisplay"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "*", features = ["winuser", "winerror", "libloaderapi", "errhandlingapi", "shellscalingapi"]}